# ericsson-capabilities

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  bootstrap.sh  requirements-dev.txt
docs/: README.md  configuration.md  opportunity-visuals-explained.md  skill-design-context.md
docs/flows/: _template.md  ci-file-auditor.md  image-generation.md  jira-assigned-tickets-summary.md  jira-defect-loop.md  jira-to-gitlab.md  pseudonymization.md  re-identification.md  search-and-read-emails.md  third-party-support-lcm-tracker.md  tol-generation.md  windows-laptop-diagnostic.md
mcp/: mcp-servers.yaml
mcp/outlook-mcp/: README.md  outlook-cli  outlook-cli.ps1  pyproject.toml  run_server.py
mcp/outlook-mcp/src/outlook_cli/: __init__.py  cli.py  server.py
scripts/: lint_manifest.py
sets/: ericsson.json
tests/: conftest.py  test_builder_skill.py  test_claude_md.py  test_jira_plugin.py  test_manifest.py  test_onboarding_baselines.py  test_onboarding_catalog.py  test_onboarding_docs.py  test_onboarding_evaluation_harness.py  test_onboarding_showcase.py  test_onboarding_skill.py  test_onboarding_state.py  test_onboarding_state_windows.py  test_opportunity_visuals_prepare.py  test_opportunity_visuals_render.py  test_opportunity_visuals_showcase.py  test_opportunity_visuals_skill.py  test_outlook_mcp.py  test_reference_workflows.py  test_skill_frontmatter.py  test_teams_plugin.py  test_workflow_ctl_approval.py  test_workflow_ctl_lifecycle.py  test_workflow_ctl_recovery.py  test_workflow_ctl_validate.py
workflows/: inbox-digest.yml  my-tickets-summary.yml
(+111 files in other folders)
