[project]
name = "outlook-cli"
version = "0.1.0"
description = "MCP server for Outlook email and calendar via COM automation"
requires-python = ">=3.10"
dependencies = ["mcp>=1.0.0"]

[project.scripts]
outlook-cli = "outlook_cli.cli:main"
outlook-mcp = "outlook_cli.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/outlook_cli"]
